<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".detail.DetailFoodActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/black"
            tools:text="@string/app_name" />


    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/NScView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/anhbunch" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:textSize="20sp"
                    android:id="@+id/tvStar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="5" />

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/star" />
            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:id="@+id/ten"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    tools:text="Bún chả Hà Nội" />
                <TextView
                    android:id="@+id/addCart"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:background="@drawable/bg_22"
                    android:textSize="20sp"
                    android:text="Thêm giỏ hàng"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <TextView
                android:textSize="16sp"
                android:id="@+id/mota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                tools:text="Bún chả – đặc sản Hà Nội “gây thương nhớ” bởi sự kết hợp hoàn hảo của thịt, rau, nước mắm cùng bún tươi. Tất cả đều vừa đủ, tạo nên sức quyến rũ không thể chối từ." />


            <TextView
                android:textSize="16sp"
                android:id="@+id/gia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/red"
                tools:text="250.000 VND" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_gravity="center"
                        android:src="@drawable/baseline_location_on_24"
                        android:layout_width="30dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_gravity="center"
                        android:src="@drawable/baseline_timer_24"
                        android:layout_width="30dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/Time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:id="@+id/review"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/red" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/binhluan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvNhanxet"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:background="@drawable/edt_border"
                    android:id="@+id/edtNhanxet"
                    android:padding="10dp"
                    android:drawableEnd="@drawable/baseline_send_24"
                    android:textSize="20sp"
                    android:hint="Nhận xét của bạn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>